Feat: radio group customization (#2)
* fix: DisplayRadioRange styles. Wrapping comment, positioning indicators.

* feat: use shadcn radio-group in RadioQuestion component, customize, animate

* fix: no underline for link button

* feat: use and customize radio-group

* chore: delete unused skeleton component

* chore: delete now unused RadioRange components

* chore: delete unused Button components

* fix: radio-group background line peaking through

* test: run screenshots tests, nearly perfect match

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -58,21 +58,19 @@
     --primary: var(--blue-black);
     --primary-foreground: var(--white);
 
-    --agree: var(--error);
-    --disagree: var(--success);
+    --agree: var(--success);
+    --disagree: var(--error);
 
     /* TODO: Delete */
     --secondary: var(--gray-5);
     --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
 
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
 
     --border: var(--blue-black);
     --input: 214.3 31.8% 91.4%;
+    --radio: var(--gray-30);
     --ring: var(--blue-black);
 
     --radius: 0.5rem;
@@ -107,12 +105,9 @@
     --secondary: var(--gray-5); /* */
     --secondary-foreground: var(--blue-black); /* Text negative */
 
-    /* TODO: Delete */
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
+    --radio: var(--gray-60);
     --ring: var(--gray-5);
   }
 }
@@ -138,5 +133,9 @@
 @layer utilities {
   .clip-arrow-small {
     clip-path: polygon(0 0, 50% 100%, 100% 0);
+  }
+
+  .clip-circle-half {
+    clip-path: polygon(-1px -1px, 50% -1px, 50% 100%, -1px 100%);
   }
 }
