--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -8,27 +8,23 @@
   background-color: var(--toolbar-bg);
   display: flex;
   align-items: center;
+  justify-content: center;
   padding-left: 24px;
   padding-right: 24px;
 }
 
 .toolbar__nav {
   max-width: var(--toolbar-max-width);
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-weight: 700;
 }
 
 .toolbar__nav a {
   text-decoration: none;
-}
-
-.toolbar__list {
-  display: flex;
-  flex-direction: row;
-  list-style-type: none;
 }
 
 .toolbar__logo-wrapper {
